@@ -5,3 +5,11 @@ Exercises-mappen kan bruges som inspiration til løsninger af opgaver i Liangs b
 Examples mappen indeholder de eksempler, som vi drøftede i klassen (på Zoom.)
 
 God fornøjelse!
+
+# VM options til JavaFX
+
+Ret stien til JavaFX og tilføj under VM options, hvis det skal køre med JavaFX. 
+
+```
+--module-path /Users/andrasacs/IdeaProjects/_external_libraries/javafx-sdk-11.0.2/lib/ --add-modules javafx.controls,javafx.fxml
+```
